--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,10 +1,18 @@
 ---
 - name: Install the epel-release package.
+  become: true
   yum:
     name: epel-release
     state: "{{ epel_state }}"
+  register: result
+  until: '"failed" not in result'
+  retries: 5
+  delay: 10
+  when: ansible_pkg_mgr == 'yum'
 
 - name: Import EPEL RPM GPG key.
+  become: true
   rpm_key:
     state: "{{ epel_state }}"
     key: "/etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-{{ ansible_distribution_major_version }}"
+  when: ansible_pkg_mgr == 'yum'
